--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -119,6 +119,13 @@
     opacity: 0.4;
 }
 
+.comment-count {
+    position:absolute;
+    bottom: -14px;
+    right: 28px;
+    opacity: 0.4;
+}
+
 button {
     font-size: 22px;
 }
