--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -82,6 +82,16 @@
         <div class="date">
             <span *ngIf="showEdit">Edited • </span>{{postData?.date | dateAgo}}
         </div>
+        <div class="comment-count">
+            <div class="row">
+                <div class="my-auto">
+                    <mat-icon style="font-size:16px!important;">mode_comment</mat-icon>
+                </div>
+                <div style="font-size:16px;">
+                    {{postData?.commentCount}}
+                </div>
+            </div>
+        </div>
         <div class="box">
             <div class="titleText text-center mb-1">
                 {{postData?.title}}
