--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -214,6 +214,13 @@
     opacity: 0.4;
 }
 
+.comment-count {
+    position:absolute;
+    right: 30px;
+    top: 18px;
+    opacity: 0.4;
+}
+
 .smallDate {
     position:absolute;
     left:2px;
