--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -101,6 +101,13 @@
     opacity: 0.4;
 }
 
+.comment-count {
+    position:absolute;
+    bottom: -14px;
+    right: 28px;
+    opacity: 0.4;
+}
+
 .my-pagination {
     transform: translate(-1.5rem, 1rem);
 }
