--- a/src/app/components/create-note/create-note.component.scss
+++ b/src/app/components/create-note/create-note.component.scss
@@ -169,6 +169,88 @@
     z-index: 1;
 }
 
+.notif-modal {
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.363);
+    z-index:2;
+    -webkit-animation: fadeIn 0.5s forwards;
+    -moz-animation: fadeIn 0.5s forwards;
+    animation: fadeIn 0.5s forwards;
+}
+
+.notif-container {
+    position: fixed;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width:90%;
+    height:425px;
+    background-color:#dff5ff;
+    box-shadow: -5px 5px 10px rgb(75, 75, 75);
+    border-radius: 10px;
+    overflow-y:scroll;
+    z-index:1;
+    -webkit-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    -moz-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+}
+
+.notif-content {
+    padding:15px;
+    margin-right:auto;
+    margin-left:auto;
+}
+
+.notif-post {
+    cursor: pointer;
+    transition: transform 0.2s linear;
+}
+
+.notif-post:hover {
+    transform: scale(1.1);
+}
+
+.no-notif {
+    text-align: center;
+    padding-top: 8.5rem;
+}
+
+.red-circle {
+    position:absolute;
+    top:-7px;
+    right:-5px;
+    width:18px;
+    height:18px;
+    background:red;
+    border-radius:50%;
+    -webkit-animation: fadeInAndOut 1s infinite;
+    -moz-animation: fadeInAndOut 1s infinite;
+    animation: fadeInAndOut 1s infinite;
+}
+
+//fades in and then fades out
+@-webkit-keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
+@-moz-keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
+@keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
 button {
     font-size: 22px;
 }
@@ -433,6 +515,10 @@ textarea {
 
     .error-text {
         font-size: 21px;
+    }
+
+    .notif-container {
+        max-width: 500px;
     }
     
 }
