--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -126,6 +126,88 @@
     opacity: 0.4;
 }
 
+.notif-modal {
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.363);
+    z-index:2;
+    -webkit-animation: fadeIn 0.5s forwards;
+    -moz-animation: fadeIn 0.5s forwards;
+    animation: fadeIn 0.5s forwards;
+}
+
+.notif-container {
+    position: fixed;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width:90%;
+    height:425px;
+    background-color:#dff5ff;
+    box-shadow: -5px 5px 10px rgb(75, 75, 75);
+    border-radius: 10px;
+    overflow-y:scroll;
+    z-index:1;
+    -webkit-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    -moz-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+}
+
+.notif-content {
+    padding:15px;
+    margin-right:auto;
+    margin-left:auto;
+}
+
+.notif-post {
+    cursor: pointer;
+    transition: transform 0.2s linear;
+}
+
+.notif-post:hover {
+    transform: scale(1.1);
+}
+
+.no-notif {
+    text-align: center;
+    padding-top: 8.5rem;
+}
+
+.red-circle {
+    position:absolute;
+    top:-7px;
+    right:-5px;
+    width:18px;
+    height:18px;
+    background:red;
+    border-radius:50%;
+    -webkit-animation: fadeInAndOut 1s infinite;
+    -moz-animation: fadeInAndOut 1s infinite;
+    animation: fadeInAndOut 1s infinite;
+}
+
+//fades in and then it fades out
+@-webkit-keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
+@-moz-keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
+@keyframes fadeInAndOut {
+    0% { opacity: 0.5; }
+    50% { opacity: 1 }
+    100% { opacity: 0.5; }
+}
+
 button {
     font-size: 22px;
 }
@@ -411,26 +493,30 @@ a:hover, a:focus {
     .noPostText {
         position: absolute;
         top: 45%;
-        left: 0;
+        left: 50%;
         right: 0;
         margin-top: -9px;
     }
 
-input{
-    color: black;
-    font-size: 20px;
-    padding: 14px 18px;
-    line-height: 35px;
-    height: 40px;
-    border: none;
-    outline: none;
-    border-bottom: 3px solid rgba(0, 0, 0, 0.555);
-    // border-left: 3px solid black;
-    margin: 10px;
-    border-radius: 3px;
-    flex-grow: 1;
-    background:rgba(255, 255, 255, 0.52);
-    transition: 0.5s linear;
-}
+    input{
+        color: black;
+        font-size: 20px;
+        padding: 14px 18px;
+        line-height: 35px;
+        height: 40px;
+        border: none;
+        outline: none;
+        border-bottom: 3px solid rgba(0, 0, 0, 0.555);
+        // border-left: 3px solid black;
+        margin: 10px;
+        border-radius: 3px;
+        flex-grow: 1;
+        background:rgba(255, 255, 255, 0.52);
+        transition: 0.5s linear;
+    }
+
+    .notif-container {
+        max-width: 500px;
+    }
     
 }
