--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -133,7 +133,7 @@
         {{errorMessageRefresh}}
     </div>
     <div class="d-flex justify-content-center flex-wrap my-2 pb-3 pb-lg-2">
-        <button class="modify m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
+        <button (click)="scroll(edit)" class="modify m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
         </button>
@@ -145,6 +145,7 @@
 </div>
 
 <div class="collapse" id="collapseEdit" [ngClass]="{ fade: fadeEditForm }">
+    <span #edit></span>
     <div class="custom-container pb-5 pb-lg-4">
         <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
             <div class="box">
