--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -125,7 +125,7 @@
         {{errorMessageRefresh}}
     </div>
     <div class="d-flex justify-content-center flex-wrap my-2 pb-3 pb-lg-2">
-        <button *ngIf="modifyPost" class="modify m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
+        <button (click)="scroll(edit)" *ngIf="modifyPost" class="modify m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
         </button>
@@ -133,7 +133,7 @@
             <mat-icon>delete</mat-icon>
             <span>Delete</span>
         </button>
-        <button class="m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseComment" aria-expanded="false" aria-controls="collapseComment" style="background-color:#fff2c7 !important; color:black;">
+        <button (click)="scroll(comment)" class="m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseComment" aria-expanded="false" aria-controls="collapseComment" style="background-color:#fff2c7 !important; color:black;">
             <mat-icon>comment</mat-icon>
             <span> Comment</span>
         </button>
@@ -141,6 +141,7 @@
 </div>
 
 <div class="collapse" id="collapseEdit" [ngClass]="{ fade: fadeEditForm }">
+    <span #edit></span>
     <div class="custom-container pb-5 pb-lg-4">
         <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
             <div class="box">
@@ -216,6 +217,7 @@
 </div>
 
 <div class="collapse" id="collapseComment" [ngClass]="{ fade: fadeCommentForm }">
+    <span #comment></span>
     <div class="container pb-4" style="position:relative;">
         <div class="comment mx-auto" [ngClass]="{ default: bgDefault, tan: bgTan, red: bgRed, skyBlue: bgSkyBlue, pink: bgPink }">
             <div class="text-center bodyText my-2">
@@ -269,6 +271,7 @@
         </div>
     </div>
 </div>
+
 <div *ngIf="showComments" class="container pb-4 comments" style="position:relative;" [ngClass]="{ fade: fadePost || fadeEditForm || fadeCommentForm }">
     <div *ngIf="errorMessageDeleteComment" class="bodyText text-center" style="color:rgb(226, 0, 0);">
         {{errorMessageDeleteComment}}
