--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -107,6 +107,9 @@
     </div>
   </div>
 </div>
+<!-- <div class="text-center my-5">
+  <button class="p-4" (click)="test()">TEST</button>
+</div> -->
 <div class="container mt-5 mb-0 my-lg-5">
   <div class="titleText text-center my-3">
     ONE DAY AT A TIME
