--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -141,7 +141,9 @@
 </div>
 
 <div class="collapse" id="collapseEdit" [ngClass]="{ fade: fadeEditForm }">
-    <span #edit></span>
+    <div class="mb-lg-5">
+        <span #edit></span>
+    </div>
     <div class="custom-container pb-5 pb-lg-4">
         <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
             <div class="box">
@@ -217,7 +219,9 @@
 </div>
 
 <div class="collapse" id="collapseComment" [ngClass]="{ fade: fadeCommentForm }">
-    <span #comment></span>
+    <div class="mb-lg-5">
+        <span #comment></span>
+    </div>
     <div class="container pb-4" style="position:relative;">
         <div class="comment mx-auto" [ngClass]="{ default: bgDefault, tan: bgTan, red: bgRed, skyBlue: bgSkyBlue, pink: bgPink }">
             <div class="text-center bodyText my-2">
