--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -145,7 +145,9 @@
 </div>
 
 <div class="collapse" id="collapseEdit" [ngClass]="{ fade: fadeEditForm }">
-    <span #edit></span>
+    <div class="mb-lg-5">
+        <span #edit></span>
+    </div>
     <div class="custom-container pb-5 pb-lg-4">
         <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
             <div class="box">
