--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -489,7 +489,7 @@ a:hover, a:focus {
     .noPostText {
         position: absolute;
         top: 45%;
-        left: 50%;
+        left: 0;
         right: 0;
         margin-top: -9px;
     }
