update the doom

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -241,7 +241,7 @@
 </div>
 <div class="pt-4 pb-2">
   <div class="bodyText text-center my-1" style="font-size:20px; opacity:0.4;">
-    © 2022 Copyright: Minna
+    ©2022: Minna
   </div>
   <div class="bodyText text-center mb-2" style="font-size:16px; opacity:0.3;">
     Designed By: Chubby Designs
